# fastbookka

./: .gitignore  lint.bat  main.py  pyproject.toml  readme.md  routes.py  run.bat
.kanbn/: index.md
.kanbn/tasks/: test-the-books-controller.md
controllers/: books_controller.py  bookscontroller.py  chapterscontroller.py  usercontroller.py
models/: books.py  chapters.py  user.py
repositories/: bookrepo.py  chapterrepo.py  userrepo.py
scripts/: Sqllite.sql  act.sh
tests/e2e/api/: books.rest  user.rest
utils/: console.py  env.py
